test/types/tuple/these/zip_forall_2darray_error.good
zip_forall_2darray_error.chpl:7: error: Tuple zipped with incompatible iterator expression.
